tests/should_fail/recursive_types/via_impls.stderr
error: Illegal recursive associated type
  --> via_impls.rs:19:1
   |
19 | impl P for Sneaky {
   | ^^^^^^^^^^^^^^^^^
   |
note: `Bad` occurs in the definition of `<Sneaky as P>::A`
  --> via_impls.rs:20:5
   |
20 |     type A = Bad;
   |     ^^^^^^
note: `<Sneaky as P>` is used in this field of `Bad`, when resolving a bound of `S`
  --> via_impls.rs:11:16
   |
11 | pub struct Bad(Box<S<Sneaky>>);
   |                ^^^^^^^^^^^^^^

error: aborting due to 1 previous error

